jasper/force-app/main/default/objects/Assignment_Group__c/Assignment_Group__c.object-meta.xml
<CustomObject>
    <label>Assignment Group</label>
    <nameField>
        <label>Assignment Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>