jasper/force-app/main/default/objects/Assignment_Group__c/fields/Business_Hours_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_End_Time__c</fullName>
    <label>Business_Hours_End_Time</label>
    <type>Time</type>
</CustomField>