jasper/force-app/main/default/objects/Assignment_Group__c/fields/Business_Hours_Morning__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Morning__c</fullName>
    <label>Business_Hours_Morning</label>
    <type>Time</type>
</CustomField>