jasper/force-app/main/default/objects/Assignment_Group__c/fields/Case_Stage_Exceed_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Stage_Exceed_Count__c</fullName>
    <label>Case Stage Exceed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>