jasper/force-app/main/default/objects/Assignment_Group__c/fields/Case_to_Assign_in_Single_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Case_to_Assign_in_Single_Transaction__c</fullName>
    <label>Case to Assign in Single Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>