jasper/force-app/main/default/objects/Assignment_Group__c/fields/Execution_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Execution_SOQL__c</fullName>
    <label>Execution SOQL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>