jasper/force-app/main/default/objects/Assignment_Group__c/fields/Minimum_Case_Volume__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Case_Volume__c</fullName>
    <label>Leads to Assign in Single Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>