jasper/force-app/main/default/objects/Assignment_Group__c/fields/Round_Robin_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Queue_Name__c</fullName>
    <label>Round Robin Queue Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>