jasper/force-app/main/default/objects/Assignment_Group__c/fields/Supported_Sobject__c.field-meta.xml
<CustomField>
    <fullName>Supported_Sobject__c</fullName>
    <label>Supported Sobject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>