jasper/force-app/main/default/objects/Assignment_Group__c/listViews/Alll.listView-meta.xml
<ListView>
    <fullName>Alll</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>